# qa_guru_lesson_19

./: README.md  pyproject.toml  pytest.ini  requirements.txt
tests_api/: test_req.py
